playing a bit with the current CI configs

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,12 @@ matrix:
     - os: linux
       python: "3.5"
       env:
-        - TOXENV=3.5-cover-linux,report,extension-coveralls,coveralls,codecov
+        - TOXENV=3.5-cover-linux,report,coveralls
     - os: osx
       python: "3.5"
       language: generic
       env:
-        - TOXENV=3.5-cover-osx,report,extension-coveralls,coveralls,codecov
+        - TOXENV=3.5-cover-osx,report,coveralls
 
     - os: linux
       python: "3.5"
@@ -39,12 +39,12 @@ matrix:
     - os: linux
       python: "3.6"
       env:
-        - TOXENV=3.6-cover-linux,report,extension-coveralls,coveralls,codecov
+        - TOXENV=3.6-cover-linux,report,coveralls
     - os: osx
       python: "3.6"
       language: generic
       env:
-        - TOXENV=3.6-cover-osx,report,extension-coveralls,coveralls,codecov
+        - TOXENV=3.6-cover-osx,report,coveralls
 
     - os: linux
       python: "3.6"
@@ -59,12 +59,12 @@ matrix:
     - os: linux
       python: "3.7"
       env:
-        - TOXENV=3.7-cover-linux,report,extension-coveralls,coveralls,codecov
+        - TOXENV=3.7-cover-linux,report,coveralls
     - os: osx
       python: "3.7"
       language: generic
       env:
-        - TOXENV=3.7-cover-osx,report,extension-coveralls,coveralls,codecov
+        - TOXENV=3.7-cover-osx,report,coveralls
 
     - os: linux
       python: "3.7"
@@ -79,12 +79,12 @@ matrix:
     - os: linux
       python: "3.8"
       env:
-        - TOXENV=3.8-cover-linux,report,extension-coveralls,coveralls,codecov
+        - TOXENV=3.8-cover-linux,report,coveralls
     - os: osx
       python: "3.8"
       language: generic
       env:
-        - TOXENV=3.8-cover-osx,report,extension-coveralls,coveralls,codecov
+        - TOXENV=3.8-cover-osx,report,coveralls
 
     - os: linux
       python: "3.8"
