--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,22 +1,20 @@
 [bumpversion]
-current_version = 0.8.0-dev
-parse = (?P<mayor>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\-(?P<release>.*)
-serialize =
-  {mayor}.{minor}.{patch}-{release}
-  {mayor}.{minor}.{patch}
-commit = False
-tag = False
-
-[bumpversion:part:release]
-values =
-  dev
-  pre
+current_version = 0.9.0
+commit = True
+tag = True
 
 [bumpversion:file:setup.py]
+search = version='{current_version}'
+replace = version='{new_version}'
 
 [bumpversion:file:README.rst]
+search = v{current_version}.
+replace = v{new_version}.
 
 [bumpversion:file:docs/conf.py]
+search = version = release = '{current_version}'
+replace = version = release = '{new_version}'
 
 [bumpversion:file:src/memwiper/__init__.py]
-
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
