--- a/.travis.yml
+++ b/.travis.yml
@@ -1,124 +1,62 @@
-# vim: nospell nofoldenable
-
 language: python
-python:
-    "3.7"
-sudo: false
-cache: pip
+dist: xenial
+cache: false
 env:
   global:
     - LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
     - SEGFAULT_SIGNALS=all
-  matrix:
-    - TOXENV=check
-    - TOXENV=docs
 matrix:
-  allow_failures:
-    - env: TOXENV=docs
   include:
-    - os: linux
-      python: "3.5"
+    - python: '3.6'
       env:
-        - TOXENV=3.5-cover-linux,report,coveralls
+        - TOXENV=check
+    - python: '3.6'
+      env:
+        - TOXENV=docs
+    - env:
+        - TOXENV=py35-cover,codecov,extension-coveralls,coveralls
+      python: '3.5'
+    - env:
+        - TOXENV=py35-nocov
+      python: '3.5'
+    - env:
+        - TOXENV=py36-cover,codecov,extension-coveralls,coveralls
+      python: '3.6'
+    - env:
+        - TOXENV=py36-nocov
+      python: '3.6'
     - os: osx
-      python: "3.5"
       language: generic
       env:
-        - TOXENV=3.5-cover-osx,report,coveralls
-
-    - os: linux
-      python: "3.5"
-      env:
-        - TOXENV=3.5-nocov-linux
+        - TOXENV=py37-cover
+    - env:
+        - TOXENV=py37-cover,codecov,extension-coveralls,coveralls
+      python: '3.7'
     - os: osx
-      python: "3.5"
       language: generic
       env:
-        - TOXENV=3.5-nocov-osx
-
-    - os: linux
-      python: "3.6"
-      env:
-        - TOXENV=3.6-cover-linux,report,coveralls
-    - os: osx
-      python: "3.6"
-      language: generic
-      env:
-        - TOXENV=3.6-cover-osx,report,coveralls
-
-    - os: linux
-      python: "3.6"
-      env:
-        - TOXENV=3.6-nocov-linux
-    - os: osx
-      python: "3.6"
-      language: generic
-      env:
-        - TOXENV=3.6-nocov-osx
-
-    - os: linux
-      python: "3.7"
-      env:
-        - TOXENV=3.7-cover-linux,report,coveralls
-    - os: osx
-      python: "3.7"
-      language: generic
-      env:
-        - TOXENV=3.7-cover-osx,report,coveralls
-
-    - os: linux
-      python: "3.7"
-      env:
-        - TOXENV=3.7-nocov-linux
-    - os: osx
-      python: "3.7"
-      language: generic
-      env:
-        - TOXENV=3.7-nocov-osx
-
-    - os: linux
-      python: "3.8"
-      env:
-        - TOXENV=3.8-cover-linux,report,coveralls
-    - os: osx
-      python: "3.8"
-      language: generic
-      env:
-        - TOXENV=3.8-cover-osx,report,coveralls
-
-    - os: linux
-      python: "3.8"
-      env:
-        - TOXENV=3.8-nocov-linux
-    - os: osx
-      python: "3.8"
-      language: generic
-      env:
-        - TOXENV=3.8-nocov-osx
-
+        - TOXENV=py37-nocov
+    - env:
+        - TOXENV=py37-nocov
+      python: '3.7'
+    - env:
+        - TOXENV=py38-cover,codecov,extension-coveralls,coveralls
+      python: '3.8'
+    - env:
+        - TOXENV=py38-nocov
+      python: '3.8'
 before_install:
   - python --version
   - uname -a
-  - if [[ $TRAVIS_OS_NAME != "osx" ]];then lsb_release -a ;fi
-install: 
+  - lsb_release -a || true
   - |
-      if [[ $TRAVIS_OS_NAME == "osx" ]];then 
-        git clone https://github.com/pyenv/pyenv.git ~/.pyenv
-        export PYENV_ROOT="$HOME/.pyenv"
-        export PATH="$PYENV_ROOT/bin:$PATH"
-        eval "$(pyenv init -)"
-        export PYENV_BRANCH=$(echo $TOXENV | cut -d"-" -f1)
-        echo "The Base branch is: $PYENV_BRANCH"
-      fi
-  - |
-      if [[ $TRAVIS_OS_NAME == "osx" ]];then
-        export PYENV_BRANCH_LASTEST=$(pyenv install --list | grep "$PYENV_BRANCH" | grep -v "-" | tail -1)
-        echo "Going for: $PYENV_BRANCH_LASTEST"
-        pyenv install $PYENV_BRANCH_LASTEST
-        pyenv local $PYENV_BRANCH_LASTEST
-        eval "$(pyenv init -)"
-      fi
-  - pip install tox
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+      [[ $TOXENV =~ py3 ]] && brew upgrade python
+      [[ $TOXENV =~ py2 ]] && brew install python@2
+      export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
+    fi
+install:
+  - python -mpip install --progress-bar=off tox -rci/requirements.txt
   - virtualenv --version
   - easy_install --version
   - pip --version
