--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -1,56 +1,48 @@
-# vim: nospell nofoldenable
-
 language: python
-python:
-    "3.7"
-sudo: false
-cache: pip
+dist: xenial
+cache: false
 env:
   global:
     - LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
     - SEGFAULT_SIGNALS=all
-  matrix:
-    - TOXENV=check
-    - TOXENV=docs
 matrix:
-  allow_failures:
-    - env: TOXENV=docs
   include:
-{%- for env, config in tox_environments|dictsort %}{{ '' }}
-  {% if config.os == 'linux' or config.os == 'osx'%}
-    - os: {{ config.os }}
-      python: "{{ '{0[0]}-5.4'.format(env.split('-')) if env.startswith('pypy') else env.split('-')[0] }}"
-      {% if config.os == "osx" %}
-      language: generic
-      {% endif %}
+    - python: '3.6'
       env:
-        - TOXENV={{ env }}{% if config.cover %},report,extension-coveralls,coveralls{% endif -%}
-  {% endif %}
-{% endfor %}
-
+        - TOXENV=check
+    - python: '3.6'
+      env:
+        - TOXENV=docs
+{%- for env, config in tox_environments|dictsort %}{{ '' }}
+{%- if 'py37' in env or 'py27' in env %}{{ '' }}
+    - os: osx
+      language: generic
+      env:
+        - TOXENV={{ env }}
+{%- endif %}{{ '' }}
+    - env:
+        - TOXENV={{ env }}{% if config.cover %},codecov,extension-coveralls,coveralls{% endif %}
+{%- if env.startswith('pypy3') %}{{ '' }}
+        - TOXPYTHON=pypy3
+      python: 'pypy3'
+{%- elif env.startswith('pypy') %}{{ '' }}
+      python: 'pypy'
+{%- else %}{{ '' }}
+      python: '{{ '{0[2]}.{0[3]}'.format(env) }}'
+{%- endif %}
+{%- endfor %}{{ '' }}
 before_install:
   - python --version
   - uname -a
-  - if [[ $TRAVIS_OS_NAME != "osx" ]];then lsb_release -a ;fi
-install: 
+  - lsb_release -a || true
   - |
-      if [[ $TRAVIS_OS_NAME == "osx" ]];then 
-        git clone https://github.com/pyenv/pyenv.git ~/.pyenv
-        export PYENV_ROOT="$HOME/.pyenv"
-        export PATH="$PYENV_ROOT/bin:$PATH"
-        eval "$(pyenv init -)"
-        export PYENV_BRANCH=$(echo $TOXENV | cut -d"-" -f1)
-        echo "The Base branch is: $PYENV_BRANCH"
-      fi
-  - |
-      if [[ $TRAVIS_OS_NAME == "osx" ]];then
-        export PYENV_BRANCH_LASTEST=$(pyenv install --list | grep "$PYENV_BRANCH" | grep -v "-" | tail -1)
-        echo "Going for: $PYENV_BRANCH_LASTEST"
-        pyenv install $PYENV_BRANCH_LASTEST
-        pyenv local $PYENV_BRANCH_LASTEST
-        eval "$(pyenv init -)"
-      fi
-  - pip install tox
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+      [[ $TOXENV =~ py3 ]] && brew upgrade python
+      [[ $TOXENV =~ py2 ]] && brew install python@2
+      export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
+    fi
+install:
+  - python -mpip install --progress-bar=off tox -rci/requirements.txt
   - virtualenv --version
   - easy_install --version
   - pip --version
