--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,37 @@
 [flake8]
 max-line-length = 140
-exclude = tests/*,*/migrations/*,*/south_migrations/*
+exclude = */migrations/*
+
+[options]
+# tests_require is a list of dependencies that are *absolutely required*
+# to run the tests. tests_require is used when running tests from your
+# *current* Python environment (that is, not using tox).
+# tests_require is ignored by tox.
+#
+# As such, you can usually get away with neglecting tests_require ---
+# it's not a big deal if some of the dependencies get left out.
+#
+# If you're running tests from your current environment, it's because
+# you're actively developing, in which case you usually have an
+# environment you built for development. But if you have to change
+# environments mid-development for any reason, tests_require can save you
+# from getting tripped up.
+#
+# tests_require is used when running tests and debugging through an IDE like
+# PyCharm, to ensure the environment the IDE is using has the requirements.
+#
+# Unless you're in one of those situations, you can simply ignore this.
+tests_require = pytest
+
+[aliases]
+# Alias `setup.py test` to `setup.py pytest`
+test = pytest
 
 [tool:pytest]
+# If a pytest section is found in one of the possible config files
+# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
+# so if you add a pytest config section elsewhere,
+# you will need to delete this section from setup.cfg.
 norecursedirs =
     .git
     .tox
@@ -10,14 +39,14 @@ norecursedirs =
     .ropeproject
     dist
     build
-    south_migrations
     migrations
+
 python_files =
     test_*.py
     *_test.py
     tests.py
 addopts =
-    -rxEfsw
+    -ra
     --strict
     --ignore=docs/conf.py
     --ignore=setup.py
@@ -26,19 +55,21 @@ addopts =
     --doctest-modules
     --doctest-glob=\*.rst
     --tb=short
+testpaths =
+    tests
 
-[isort]
+[tool:isort]
 force_single_line = True
 line_length = 120
 known_first_party = memwiper
 default_section = THIRDPARTY
 forced_separate = test_memwiper
 not_skip = __init__.py
-skip = migrations, south_migrations
+skip = migrations
 
 [matrix]
 # This is the configuration for the `./bootstrap.py` script.
-# It generates `.travis.yml`, `tox.ini` and `appveyor.yml`.
+# It generates `.travis.yml`, `tox.ini` and `.appveyor.yml`.
 #
 # Syntax: [alias:] value [!variable[glob]] [&variable[glob]]
 #
@@ -58,27 +89,20 @@ skip = migrations, south_migrations
 #  - can use as many you want
 
 python_versions =
-    3.5
-    3.6
-    3.7
-    3.8
+    py35
+    py36
+    py37
+    py38
 
 dependencies =
-#    1.4: Django==1.4.16 !python_versions[3.*]
+#    1.4: Django==1.4.16 !python_versions[py3*]
 #    1.5: Django==1.5.11
 #    1.6: Django==1.6.8
-#    1.7: Django==1.7.1 !python_versions[2.6]
+#    1.7: Django==1.7.1 !python_versions[py26]
 # Deps commented above are provided as examples. That's what you would use in a Django project.
 
 coverage_flags =
     cover: true
     nocov: false
-
 environment_variables =
     -
-
-os =
-    linux
-    osx
-# Images, 2015=w2k12r2, 2017=w2k16
-    win
