--- a/tox.ini
+++ b/tox.ini
@@ -2,37 +2,21 @@
 envlist =
     clean,
     check,
-    3.5-cover-linux,
-    3.5-cover-osx,
-    3.5-cover-win,
-    3.5-nocov-linux,
-    3.5-nocov-osx,
-    3.5-nocov-win,
-    3.6-cover-linux,
-    3.6-cover-osx,
-    3.6-cover-win,
-    3.6-nocov-linux,
-    3.6-nocov-osx,
-    3.6-nocov-win,
-    3.7-cover-linux,
-    3.7-cover-osx,
-    3.7-cover-win,
-    3.7-nocov-linux,
-    3.7-nocov-osx,
-    3.7-nocov-win,
-    3.8-cover-linux,
-    3.8-cover-osx,
-    3.8-cover-win,
-    3.8-nocov-linux,
-    3.8-nocov-osx,
-    3.8-nocov-win,
-    report,
-    docs
+    docs,
+    py35-cover,
+    py35-nocov,
+    py36-cover,
+    py36-nocov,
+    py37-cover,
+    py37-nocov,
+    py38-cover,
+    py38-nocov,
+    report
 
 [testenv]
 basepython =
-    {docs,spell}: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
+    docs: {env:TOXPYTHON:python3.6}
+    {bootstrap,clean,check,report,codecov,coveralls,extension-coveralls}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -43,37 +27,15 @@ deps =
     pytest-travis-fold
 commands =
     python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test -vv --ignore=src}
-
-[testenv:spell]
-setenv =
-    SPELLCHECK=1
-commands =
-    sphinx-build -b spelling docs dist/docs
-skip_install = true
-usedevelop = false
-deps =
-    -r{toxinidir}/docs/requirements.txt
-    sphinxcontrib-spelling
-    pyenchant
-
-[testenv:docs]
-deps =
-    -r{toxinidir}/docs/requirements.txt
-commands =
-    sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
+    {posargs:pytest -vv --ignore=src}
 
 [testenv:bootstrap]
 deps =
     jinja2
     matrix
 skip_install = true
-usedevelop = false
 commands =
-    python ci/bootstrap.py
-passenv =
-    *
+    python ci/bootstrap.py --no-env
 
 [testenv:check]
 deps =
@@ -84,38 +46,57 @@ deps =
     pygments
     isort
 skip_install = true
-usedevelop = false
 commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
 
+
+[testenv:docs]
+usedevelop = true
+deps =
+    -r{toxinidir}/docs/requirements.txt
+commands =
+    sphinx-build {posargs:-E} -b html docs dist/docs
+    sphinx-build -b linkcheck docs dist/docs
+
+[testenv:coveralls]
+deps =
+    coveralls
+skip_install = true
+commands =
+    coveralls --merge=extension-coveralls.json []
+
+
+[testenv:extension-coveralls]
+deps =
+    cpp-coveralls
+skip_install = true
+commands =
+    coveralls --build-root=. --include=src --dump=extension-coveralls.json []
+
+
 [testenv:codecov]
 deps =
     codecov
 skip_install = true
-usedevelop = false
 commands =
-    coverage xml --ignore-errors
     codecov []
 
 [testenv:report]
 deps = coverage
 skip_install = true
-usedevelop = false
 commands =
-    coverage combine --append --ignore-errors
     coverage report
     coverage html
 
 [testenv:clean]
 commands = coverage erase
 skip_install = true
-usedevelop = false
 deps = coverage
 
-[testenv:3.5-cover-linux]
+[testenv:py35-cover]
 basepython = {env:TOXPYTHON:python3.5}
 setenv =
     {[testenv]setenv}
@@ -123,47 +104,15 @@ setenv =
 usedevelop = true
 commands =
     python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
+    {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
     {[testenv]deps}
     pytest-cov
 
-[testenv:3.5-cover-osx]
-basepython = {env:TOXPYTHON:python3.5}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.5-cover-win]
-basepython = {env:TOXPYTHON:python3.5}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.5-nocov-linux]
+[testenv:py35-nocov]
 basepython = {env:TOXPYTHON:python3.5}
 
-[testenv:3.5-nocov-osx]
-basepython = {env:TOXPYTHON:python3.5}
-
-[testenv:3.5-nocov-win]
-basepython = {env:TOXPYTHON:python3.5}
-
-[testenv:3.6-cover-linux]
+[testenv:py36-cover]
 basepython = {env:TOXPYTHON:python3.6}
 setenv =
     {[testenv]setenv}
@@ -171,47 +120,15 @@ setenv =
 usedevelop = true
 commands =
     python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
+    {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
     {[testenv]deps}
     pytest-cov
 
-[testenv:3.6-cover-osx]
-basepython = {env:TOXPYTHON:python3.6}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.6-cover-win]
-basepython = {env:TOXPYTHON:python3.6}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.6-nocov-linux]
+[testenv:py36-nocov]
 basepython = {env:TOXPYTHON:python3.6}
 
-[testenv:3.6-nocov-osx]
-basepython = {env:TOXPYTHON:python3.6}
-
-[testenv:3.6-nocov-win]
-basepython = {env:TOXPYTHON:python3.6}
-
-[testenv:3.7-cover-linux]
+[testenv:py37-cover]
 basepython = {env:TOXPYTHON:python3.7}
 setenv =
     {[testenv]setenv}
@@ -219,47 +136,15 @@ setenv =
 usedevelop = true
 commands =
     python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
+    {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
     {[testenv]deps}
     pytest-cov
 
-[testenv:3.7-cover-osx]
-basepython = {env:TOXPYTHON:python3.7}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.7-cover-win]
-basepython = {env:TOXPYTHON:python3.7}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.7-nocov-linux]
+[testenv:py37-nocov]
 basepython = {env:TOXPYTHON:python3.7}
 
-[testenv:3.7-nocov-osx]
-basepython = {env:TOXPYTHON:python3.7}
-
-[testenv:3.7-nocov-win]
-basepython = {env:TOXPYTHON:python3.7}
-
-[testenv:3.8-cover-linux]
+[testenv:py38-cover]
 basepython = {env:TOXPYTHON:python3.8}
 setenv =
     {[testenv]setenv}
@@ -267,45 +152,10 @@ setenv =
 usedevelop = true
 commands =
     python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
+    {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
     {[testenv]deps}
     pytest-cov
 
-[testenv:3.8-cover-osx]
+[testenv:py38-nocov]
 basepython = {env:TOXPYTHON:python3.8}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.8-cover-win]
-basepython = {env:TOXPYTHON:python3.8}
-setenv =
-    {[testenv]setenv}
-    SETUPPY_CFLAGS=-coverage
-usedevelop = true
-commands =
-    python setup.py clean --all build_ext --force --inplace
-    {posargs:py.test --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:3.8-nocov-linux]
-basepython = {env:TOXPYTHON:python3.8}
-
-[testenv:3.8-nocov-osx]
-basepython = {env:TOXPYTHON:python3.8}
-
-[testenv:3.8-nocov-win]
-basepython = {env:TOXPYTHON:python3.8}
-
-
-
