Fixing configs, adding black and bandit to the mix

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,9 @@ envlist =
     py38-nocov,
     report
 
+[pytest]
+testpaths = tests
+
 [testenv]
 basepython =
     docs: {env:TOXPYTHON:python3.6}
@@ -42,6 +45,7 @@ deps =
     docutils
     check-manifest
     flake8
+    black
     readme-renderer
     pygments
     isort
@@ -49,6 +53,7 @@ skip_install = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
+    black src tests setup.py
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
 
