--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,15 @@
 [bumpversion]
-current_version = 0.9.0
+current_version = 0.9.0.alpha
 commit = True
 tag = True
+tag_name = v{new_version}
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<hotfix>\d+)\.(?P<state>.*)
+serialize = {major}.{minor}.{hotfix}.{state}
+
+[bumpversion:part:state]
+values =
+  alpha
+  beta
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
@@ -18,3 +26,7 @@ replace = version = release = '{new_version}'
 [bumpversion:file:src/memwiper/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
+
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace= version = "{new_version}"
