--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,7 +9,10 @@ include .cookiecutterrc
 include .editorconfig
 include .isort.cfg
 include .readthedocs.yml
-include pytest.ini
+include .flake8
+include bandit.yml
+include pyproject.toml
+
 
 include AUTHORS.rst
 include CHANGELOG.rst
@@ -20,9 +23,9 @@ include TODO.rst
 include requirements.txt
 include requirements-dev.txt
 
-include tox.ini .travis.yml appveyor.yml
+include tox.ini .travis.yml
 
-prune __pycache__ 
+prune __pycache__
 prune .ropeproject
 prune */.ropeproject
 
