--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -8,6 +8,9 @@ envlist =
 {% endfor %}
     report
 
+[pytest]
+testpaths = tests
+
 [testenv]
 basepython =
     docs: {env:TOXPYTHON:python3.6}
@@ -37,6 +40,7 @@ deps =
     docutils
     check-manifest
     flake8
+    black
     readme-renderer
     pygments
     isort
@@ -44,6 +48,7 @@ skip_install = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
+    black src tests setup.py
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
 
