--- a/bandit.yml
+++ b/bandit.yml
@@ -86,7 +86,9 @@
 tests:
 
 # (optional) list skipped test IDs here, eg '[B101, B406]':
-skips:
+# B404:blacklist - subprocess
+# B603:subprocess_without_shell_equals_true
+skips: ['B404', 'B603']
 
 ### (optional) plugin settings - some test plugins require configuration data
 ### that may be given here, per-plugin. All bandit test plugins have a built in
