--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ deps =
     readme-renderer
     pygments
     isort
+    bandit
 skip_install = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
@@ -56,7 +57,7 @@ commands =
     black src tests setup.py
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
-
+    bandit -r src
 
 [testenv:docs]
 usedevelop = true
