--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -44,6 +44,7 @@ deps =
     readme-renderer
     pygments
     isort
+    bandit
 skip_install = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
@@ -51,7 +52,7 @@ commands =
     black src tests setup.py
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
-
+    bandit -r src
 
 [testenv:docs]
 usedevelop = true
