FInising the config of bandit

--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,7 @@ commands =
     black src tests setup.py
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
-    bandit -r src
+    bandit -c bandit.yml -r src
 
 [testenv:docs]
 usedevelop = true
