Added codecov.io config file

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,6 +12,7 @@ include .readthedocs.yml
 include .flake8
 include bandit.yml
 include pyproject.toml
+include codecov.yml
 
 
 include AUTHORS.rst
