Trying to fix macos tests on travis. Using pyenv to install the required release for testing

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ testpaths = tests
 
 [testenv]
 basepython =
-    docs: {env:TOXPYTHON:python3.6}
+    docs: {env:TOXPYTHON:python3}
     {bootstrap,clean,check,report,codecov,coveralls,extension-coveralls}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
@@ -109,6 +109,18 @@ setenv =
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+        brew update
+        brew install openssl readline sqlite3 xz zlib
+        brew install pyenv
+        if [[ command -v pyenv 1>/dev/null 2>&1]]; then
+            eval "$(pyenv init -)"
+        fi
+        pyenv install py35-cover
+        pyenv local py35-cover
+        #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
+    fi
+    python --version
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
@@ -125,6 +137,18 @@ setenv =
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+        brew update
+        brew install openssl readline sqlite3 xz zlib
+        brew install pyenv
+        if [[ command -v pyenv 1>/dev/null 2>&1]]; then
+            eval "$(pyenv init -)"
+        fi
+        pyenv install py36-cover
+        pyenv local py36-cover
+        #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
+    fi
+    python --version
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
@@ -141,6 +165,18 @@ setenv =
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+        brew update
+        brew install openssl readline sqlite3 xz zlib
+        brew install pyenv
+        if [[ command -v pyenv 1>/dev/null 2>&1]]; then
+            eval "$(pyenv init -)"
+        fi
+        pyenv install py37-cover
+        pyenv local py37-cover
+        #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
+    fi
+    python --version
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
@@ -157,6 +193,18 @@ setenv =
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+        brew update
+        brew install openssl readline sqlite3 xz zlib
+        brew install pyenv
+        if [[ command -v pyenv 1>/dev/null 2>&1]]; then
+            eval "$(pyenv init -)"
+        fi
+        pyenv install py38-cover
+        pyenv local py38-cover
+        #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
+    fi
+    python --version
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
