--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -13,7 +13,7 @@ testpaths = tests
 
 [testenv]
 basepython =
-    docs: {env:TOXPYTHON:python3.6}
+    docs: {env:TOXPYTHON:python3}
     {bootstrap,clean,check,report,codecov,coveralls,extension-coveralls}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
@@ -111,6 +111,18 @@ setenv =
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
+    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+        brew update
+        brew install openssl readline sqlite3 xz zlib
+        brew install pyenv
+        if [[ command -v pyenv 1>/dev/null 2>&1]]; then
+            eval "$(pyenv init -)"
+        fi
+        pyenv install {{ env }}
+        pyenv local {{ env }}
+        #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
+    fi
+    python --version
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 {% endif %}
