--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ testpaths = tests
 [testenv]
 basepython =
     docs: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report,codecov,coveralls,extension-coveralls}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,codecov,coveralls,extension-coveralls,codacy}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -74,14 +74,12 @@ skip_install = true
 commands =
     coveralls --merge=extension-coveralls.json []
 
-
 [testenv:extension-coveralls]
 deps =
     cpp-coveralls
 skip_install = true
 commands =
     coveralls --build-root=. --include=src --dump=extension-coveralls.json []
-
 
 [testenv:codecov]
 deps =
@@ -90,12 +88,20 @@ skip_install = true
 commands =
     codecov []
 
+[testenv:codacy]
+deps =
+    codacy-coverage
+skip_install = true
+commands =
+    python-codacy-coverage -t 5e7c6ae242aa4da3a700b89bde497bf2 -r coverage.xml []
+
 [testenv:report]
 deps = coverage
 skip_install = true
 commands =
     coverage report
     coverage html
+    coverage xml
 
 [testenv:clean]
 commands = coverage erase
@@ -120,7 +126,6 @@ commands =
         pyenv local py35-cover
         #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
     fi
-    python --version
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
@@ -148,7 +153,6 @@ commands =
         pyenv local py36-cover
         #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
     fi
-    python --version
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
@@ -176,7 +180,6 @@ commands =
         pyenv local py37-cover
         #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
     fi
-    python --version
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
@@ -204,7 +207,6 @@ commands =
         pyenv local py38-cover
         #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
     fi
-    python --version
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
