More CI fixing on the way

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,9 @@ before_install:
   - lsb_release -a || true
   - |
     if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-      [[ $TOXENV =~ py3 ]] && brew upgrade python
-      [[ $TOXENV =~ py2 ]] && brew install python@2
+      brew update
+      brew install openssl readline sqlite3 xz zlib
+      brew install pydev
       export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
     fi
 install:
