--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ testpaths = tests
 [testenv]
 basepython =
     docs: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report,codecov,coveralls,extension-coveralls,codacy}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,codecov,coveralls,extension-coveralls}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -88,13 +88,6 @@ skip_install = true
 commands =
     codecov []
 
-[testenv:codacy]
-deps =
-    codacy-coverage
-skip_install = true
-commands =
-    python-codacy-coverage -t 5e7c6ae242aa4da3a700b89bde497bf2 -r coverage.xml []
-
 [testenv:report]
 deps = coverage
 skip_install = true
@@ -115,17 +108,6 @@ setenv =
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
-    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-        brew update
-        brew install openssl readline sqlite3 xz zlib
-        brew install pyenv
-        if [[ command -v pyenv 1>/dev/null 2>&1]]; then
-            eval "$(pyenv init -)"
-        fi
-        pyenv install py35-cover
-        pyenv local py35-cover
-        #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
-    fi
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
@@ -142,17 +124,6 @@ setenv =
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
-    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-        brew update
-        brew install openssl readline sqlite3 xz zlib
-        brew install pyenv
-        if [[ command -v pyenv 1>/dev/null 2>&1]]; then
-            eval "$(pyenv init -)"
-        fi
-        pyenv install py36-cover
-        pyenv local py36-cover
-        #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
-    fi
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
@@ -169,17 +140,6 @@ setenv =
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
-    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-        brew update
-        brew install openssl readline sqlite3 xz zlib
-        brew install pyenv
-        if [[ command -v pyenv 1>/dev/null 2>&1]]; then
-            eval "$(pyenv init -)"
-        fi
-        pyenv install py37-cover
-        pyenv local py37-cover
-        #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
-    fi
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
@@ -196,17 +156,6 @@ setenv =
     SETUPPY_CFLAGS=-coverage
 usedevelop = true
 commands =
-    if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-        brew update
-        brew install openssl readline sqlite3 xz zlib
-        brew install pyenv
-        if [[ command -v pyenv 1>/dev/null 2>&1]]; then
-            eval "$(pyenv init -)"
-        fi
-        pyenv install py38-cover
-        pyenv local py38-cover
-        #export PATH="/usr/local/opt/python/libexec/bin:${PATH}"
-    fi
     python setup.py clean --all build_ext --force --inplace
     {posargs:pytest --cov --cov-report=term-missing -vv}
 deps =
