--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -14,7 +14,7 @@ testpaths = tests
 [testenv]
 basepython =
     docs: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report,codecov,coveralls,extension-coveralls}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -61,20 +61,6 @@ deps =
 commands =
     sphinx-build {posargs:-E} -b html docs dist/docs
     sphinx-build -b linkcheck docs dist/docs
-
-[testenv:coveralls]
-deps =
-    coveralls
-skip_install = true
-commands =
-    coveralls --merge=extension-coveralls.json []
-
-[testenv:extension-coveralls]
-deps =
-    cpp-coveralls
-skip_install = true
-commands =
-    coveralls --build-root=. --include=src --dump=extension-coveralls.json []
 
 [testenv:codecov]
 deps =
