Removed coveralls from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,13 @@ matrix:
       env:
         - TOXENV=docs
     - env:
-        - TOXENV=py35-cover,codecov,extension-coveralls,coveralls
+        - TOXENV=py35-cover,codecov
       python: '3.5'
     - env:
         - TOXENV=py35-nocov
       python: '3.5'
     - env:
-        - TOXENV=py36-cover,codecov,extension-coveralls,coveralls
+        - TOXENV=py36-cover,codecov
       python: '3.6'
     - env:
         - TOXENV=py36-nocov
@@ -30,7 +30,7 @@ matrix:
       env:
         - TOXENV=py37-cover
     - env:
-        - TOXENV=py37-cover,codecov,extension-coveralls,coveralls
+        - TOXENV=py37-cover,codecov
       python: '3.7'
     - os: osx
       language: generic
@@ -40,7 +40,7 @@ matrix:
         - TOXENV=py37-nocov
       python: '3.7'
     - env:
-        - TOXENV=py38-cover,codecov,extension-coveralls,coveralls
+        - TOXENV=py38-cover,codecov
       python: '3.8'
     - env:
         - TOXENV=py38-nocov
