Another take to try to fix macosx build in travis

--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -37,10 +37,18 @@ before_install:
   - lsb_release -a || true
   - |
     if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+      python --version
+      pyenv versions
       pyenv install 3.7-dev
+      pyenv versions
       pyenv global 3.7-dev
+      pyenv versions
+      python --version
+      which python
     fi
 install:
+  - python --version
+  - which python
   - python -mpip install --progress-bar=off tox -r ci/requirements.txt
   - virtualenv --version
   - easy_install --version
