--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,9 @@ matrix:
     - env:
         - TOXENV=py38-nocov
       python: '3.8'
+jobs:
+    allow_failures:
+    - os: osx
 before_install:
   - python --version
   - uname -a
