--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -31,6 +31,9 @@ matrix:
       python: '{{ '{0[2]}.{0[3]}'.format(env) }}'
 {%- endif %}
 {%- endfor %}{{ '' }}
+jobs:
+    allow_failures:
+    - os: osx
 before_install:
   - python --version
   - uname -a
