--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ matrix:
     - env:
         - TOXENV=py36-nocov
       python: '3.6'
+  allow_failure:
     - os: osx
       language: generic
       env:
@@ -32,6 +33,7 @@ matrix:
     - env:
         - TOXENV=py37-cover,codecov
       python: '3.7'
+  allow_failure:
     - os: osx
       language: generic
       env:
