--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -15,6 +15,7 @@ matrix:
         - TOXENV=docs
 {%- for env, config in tox_environments|dictsort %}{{ '' }}
 {%- if 'py37' in env or 'py27' in env %}{{ '' }}
+  allow_failure:
     - os: osx
       language: generic
       env:
@@ -28,7 +29,7 @@ matrix:
 {%- elif env.startswith('pypy') %}{{ '' }}
       python: 'pypy'
 {%- else %}{{ '' }}
-      python: '{{ '{0[2]}.{0[3]}'.format(env) }}'
+      python: '{{ "{0[2]}.{0[3]}".format(env) }}'
 {%- endif %}
 {%- endfor %}{{ '' }}
 jobs:
