--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,6 +10,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.5, 3.6, 3.7, 3.8]
+        architectures: [x86, x86_64]
 
     steps:
     - uses: actions/checkout@v1
@@ -17,6 +18,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+        architecture: ${{ matrix.architextures }} 
+    - name: Bash Command Lines for GitHub Actions
+      uses: jdickey/bash@v.1.1.1
+      args: ["apt-get install gcc python-dev -y"]
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
