--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -21,7 +21,8 @@ jobs:
         architecture: ${{ matrix.architextures }} 
     - name: Bash Command Lines for GitHub Actions
       uses: jdickey/bash@v.1.1.1
-      args: ["apt-get install gcc python-dev -y"]
+      with:
+        args: ["apt-get install gcc python-dev -y"]
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
