--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Bash Command Lines for GitHub Actions
       uses: jdickey/bash@v.1.1.1
       with:
-        args: ["apt-get install gcc python-dev -y"]
+        args: apt-get install gcc python-dev -y
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
