--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.5, 3.6, 3.7, 3.8]
-        architectures: [x86, x86_64]
+        architecture: [x86, x86_64]
 
     steps:
     - uses: actions/checkout@v1
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-        architecture: ${{ matrix.architextures }} 
+        architecture: ${{ matrix.architexture }}
     - name: Bash Command Lines for GitHub Actions
       uses: jdickey/bash@v.1.1.1
       with:
