--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.5, 3.6, 3.7, 3.8]
-        architecture: [x86, x86_64]
+        architecture: [x86_64] # No chance to use x86 here :(
 
     steps:
     - uses: actions/checkout@v1
