--- a/.travis.yml
+++ b/.travis.yml
@@ -51,12 +51,14 @@ before_install:
   - lsb_release -a || true
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
+      export LD_PRELOAD=
       choco install python3
       pip install pyenv-win --target $HOME/.pyenv
       export PATH="$HOME/.pyenv/pyenv-win/bin:$HOME/.pyenv/pyenv-win/shims:$PATH"
     fi
   - |
     if [[ $TRAVIS_OS_NAME == 'osx' ]] || [[ $TRAVIS_OS_NAME == 'windows' ]]; then
+      export LD_PRELOAD=
       python --version
       eval "$(pyenv init -)"
       pyenv rehash
