--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -43,7 +43,7 @@ before_install:
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
       choco install python3
-      python -m ensurepip
+      choco install pip # as python -m ensurepip sometimes fails
       pip install pyenv-win --target $HOME/.pyenv
       export PATH="$HOME/.pyenv/pyenv-win/bin:$HOME/.pyenv/pyenv-win/shims:$PATH"
     fi
