--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -31,7 +31,7 @@ matrix:
       env:
         - TOXENV={{ env }}
     - os: windows
-      language: generic
+      language: shell
       env:
         - TOXENV={{ env }}
         - LD_PRELOAD=
