--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ dist: xenial
 cache: false
 env:
   global:
-      if os == linux:
     - LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
     - SEGFAULT_SIGNALS=all
 matrix:
@@ -52,12 +51,10 @@ before_install:
   - uname -a
   - lsb_release -a || true
   - |
-      if os = windows:
-        choco install python3 --params '/InstallDir:C:\python3'
-        set PATH='\%PATH\%;c:\python3'
-        echo 'Installed python base in \%PATH\%'
-        pip install pyenv-win --target c:\pyenv
-        set PATH="c:\pyenv\pyenv-win\bin:c:\pyenv\pyenv-win\shims:\PATH\%"
+    if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
+        choco install python --params '/quiet /InstallDir:C:\\python3 /Include_doc 0 /PrependPath 1'
+        pip install pyenv-win --target '/c/pyenv'
+    fi
   - |
     if [[ $TRAVIS_OS_NAME == 'osx' ]] || [[ $TRAVIS_OS_NAME == 'windows' ]]; then
       python --version
