--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ before_install:
   - lsb_release -a || true
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
-        python -m ensurepip
+        python -m ensurepip --user
         python -m pip install pyenv-win --target /c/pyenv
     fi
   - |
