--- a/.travis.yml
+++ b/.travis.yml
@@ -53,11 +53,12 @@ before_install:
   - lsb_release -a || true
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
-        python -c "import os, sys;print(os.path.dirname(sys.executable))"
-        choco search python
-        git clone https://github.com/pyenv-win/pyenv-win.git "$HOME/.pyenv"
-        export PYENV="$HOME/.pyenv"
-        export PATH="$PYENV/bin:$PYENV/shims:$PATH"
+        choco install python --params "/InstallDir C:\\python"
+        export PATH="/c/python/:$PATH"
+        python --version
+        python -m pip install --upgrade pip
+        pip3 install --upgrade pytest
+        pip3 install codecov
     fi
   - |
     if [[ $TRAVIS_OS_NAME == 'osx' ]] || [[ $TRAVIS_OS_NAME == 'windows' ]]; then
