--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ jobs:
       env:
         - TOXENV=py37-nocov
         - LD_PRELOAD=
+        - PATH=/c/Python3:/c/Python3/Scripts:$PATH
     - env:
         - TOXENV=py38-cover,codecov
       python: '3.8'
@@ -53,10 +54,11 @@ before_install:
   - lsb_release -a || true
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
-        choco install python --params "/InstallDir C:\\python"
-        export PATH="/c/python/:$PATH"
+        choco install python --params "/InstallDir C:\\Python3"
         python --version
         python -m pip install --upgrade pip
+        python3 --version
+        python3 -m pip install --upgrade pip
         pip3 install --upgrade pytest
         pip3 install codecov
     fi
