--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -35,6 +35,7 @@ jobs:
       env:
         - TOXENV={{ env }}
         - LD_PRELOAD=
+        - PATH=/c/Python3:/c/Python3/Scripts:$PATH
 {%- endif %}{{ '' }}
 {%- endfor %}{{ '' }}
 before_install:
@@ -43,10 +44,11 @@ before_install:
   - lsb_release -a || true
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
-        choco install python --params "/InstallDir C:\\python"
-        export PATH="/c/python/:$PATH"
+        choco install python --params "/InstallDir C:\\Python3"
         python --version
         python -m pip install --upgrade pip
+        python3 --version
+        python3 -m pip install --upgrade pip
         pip3 install --upgrade pytest
         pip3 install codecov
     fi
