--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ jobs:
       env:
         - TOXENV=py37-nocov
         - LD_PRELOAD=
-        - PATH=/c/Python3:/c/Python3/Scripts:$PATH
+        - PATH=/c/Python38:/c/Python38/Scripts:$PATH
     - env:
         - TOXENV=py38-cover,codecov
       python: '3.8'
@@ -54,7 +54,9 @@ before_install:
   - lsb_release -a || true
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
-        choco install python --params "/InstallDir C:\\Python3"
+        echo "$PATH"
+        export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
+        choco install python
         python --version
         python -m pip install --upgrade pip
         python3 --version
