--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -35,7 +35,7 @@ jobs:
       env:
         - TOXENV={{ env }}
         - LD_PRELOAD=
-        - PATH=/c/Python3:/c/Python3/Scripts:$PATH
+        - PATH=/c/Python38:/c/Python38/Scripts:$PATH
 {%- endif %}{{ '' }}
 {%- endfor %}{{ '' }}
 before_install:
@@ -44,7 +44,9 @@ before_install:
   - lsb_release -a || true
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
-        choco install python --params "/InstallDir C:\\Python3"
+        echo "$PATH"
+        export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
+        choco install python
         python --version
         python -m pip install --upgrade pip
         python3 --version
