--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ jobs:
         - TOXENV=py37-nocov
         - LD_PRELOAD=
         - PYTHON_VERS=3.7
-        - PYTHON_HOME=/c/Python$PYTHON_VERS
+        - PYTHON_HOME=/c/Python$37
         - PATH=$PYTHON_HOME:$PYTHON_HOME/Scripts:$PATH
     - env:
         - TOXENV=py38-cover,codecov
