Using full paths?, take 2!

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,14 +57,39 @@ before_install:
   - |
     if [[ $TRAVIS_OS_NAME == 'windows' ]]; then
         choco install python --version "$PYTHON_VERS"
-        alias python=$PYTHON_HOME/python.exe
+        echo ""
+        echo ""
+        echo ""
+        echo ""
+        export PATH=$PYTHON_HOME:$PYTHON_HOME/Scripts:$PATH
+        echo ""
+        echo ""
         python --version
+        echo ""
+        echo ""
         $PYTHON_HOME/python --version
+        echo ""
+        echo ""
+        $PYTHON_HOME/python.exe --version
+        echo ""
+        echo ""
         $PYTHON_HOME/python3 --version
-        $PYTHON_HOME/python37 --version
+        echo ""
+        echo ""
+        $PYTHON_HOME/python3.exe --version
+        echo ""
         echo ""
         sleep 1
-        ls -lR $PYTHON_HOME
+        pip --version
+        pip3 --version
+        echo ""
+        echo ""
+        $PYTHON_HOME/pip --version
+        $PYTHON_HOME/pip3 --version
+        echo ""
+        echo ""
+        $PYTHON_HOME/pip.exe --version
+        $PYTHON_HOME/pip3.exe --version
         #pip3 install --upgrade pytest
         #pip3 install codecov
     fi
