So windows is working in the CI, but failing for some reason.

--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -56,9 +56,11 @@ before_install:
   - |
     if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
       eval "$(pyenv init -)"
+      pyenv rehash
       pyenv install "$PYTHON_VERS"-dev
       pyenv global "$PYTHON_VERS"-dev
       python --version
+      pip --version
     fi
 install:
   - python -mpip install --progress-bar=off tox -r ci/requirements.txt
