So windows is working in the CI, but failing for some reason.

--- a/.travis.yml
+++ b/.travis.yml
@@ -158,8 +158,8 @@ jobs:
         - PYTHON_HOME=/c/Python38
         - PATH=$PYTHON_HOME:$PYTHON_HOME/Scripts:$PATH
   allow_failures:
-    - os: windows
-    - env: TOXENV=docs
+    os: windows
+    env: TOXENV=docs
 before_install:
   - python --version
   - uname -a
