--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -51,8 +51,8 @@ jobs:
 {%- endif %}{{ '' }}
 {%- endfor %}{{ '' }}
   allow_failures:
-    - os: windows
-    - env: TOXENV=docs
+    os: windows
+    env: TOXENV=docs
 before_install:
   - python --version
   - uname -a
