--- a/ci/templates/.travis.yml
+++ b/ci/templates/.travis.yml
@@ -51,9 +51,8 @@ jobs:
 {%- endif %}{{ '' }}
 {%- endfor %}{{ '' }}
   allow_failures:
-    env:
-      - TOXENV=docs
-      - TOXENV=py38-nocov
+  - env: TOXENV=docs
+  - os: windows
 before_install:
   - python --version
   - uname -a
